--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -66,6 +66,7 @@ input[type="text"], input[type="email"], input[type="password"], input[type=numb
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 /* Track */
