--- a/src/components/form/Autocomplete/core/styles.css
+++ b/src/components/form/Autocomplete/core/styles.css
@@ -24,6 +24,9 @@ input[type="text"], [type="number"] {
     padding-left: 15px;
     padding-right: 2.2rem;
 }
+@media screen and (max-width: 1200px) {
+    .autocomplete-core .autocomplete-input input {font-size: 12px;}
+}
 .autocomplete-core .input-skeleton {
     width: 100%;
     height: 42px;
@@ -72,6 +75,9 @@ input[type="text"], [type="number"] {
     border-bottom-style: solid;
     transition: .2s;
 }
+@media screen and (max-width: 1200px) {
+    .autocomplete-core .core-option * {font-size: 12px;}
+}
 .autocomplete-core-options .core-option:hover {
     cursor: pointer;
     background-color: #e9e9e9;
@@ -94,7 +100,7 @@ input[type="text"], [type="number"] {
 }
 .autocomplete-core .arrow {
     position: absolute;
-    top: 8px;
+    top: 10px;
     right: 10px;
 }
 .autocomplete-core .no-border-bottom {
