--- a/src/layout/Sidebar/NavItem/styles.css
+++ b/src/layout/Sidebar/NavItem/styles.css
@@ -70,3 +70,12 @@
     border-bottom: solid 1px #d1d1d1;
     padding-left: 1rem;
 }
+
+@media screen and (max-width: 1200px) {
+    .menu-item .left .col-item .label {
+        font-size: 12px;
+    }
+    .menu-item .left .col-item .icon {
+        font-size: 18px;
+    }
+}
