--- a/src/layout/Sidebar/NavItem/styles.css
+++ b/src/layout/Sidebar/NavItem/styles.css
@@ -28,6 +28,9 @@
 .menu-item .left .col-item .icon {
     font-size: 24px;
 }
+.menu-item .left .col-item .sub-option {
+    font-size: 18px;
+}
 .menu-item .left {
     width: 100%;
     display: flex;
